@@ -210,7 +210,8 @@ $magicWords = array(
 	'toc'                    => array( 0,    '__TOC__'                ),
 	'noeditsection'          => array( 0,    '__NOEDITSECTION__'      ),
 	'noheader'               => array( 0,    '__NOHEADER__'           ),
-	'currentmonth'           => array( 1,    'CURRENTMONTH'           ),
+	'currentmonth'           => array( 1,    'CURRENTMONTH', 'CURRENTMONTH2' ),
+	'currentmonth1'          => array( 1,    'CURRENTMONTH1'          ),
 	'currentmonthname'       => array( 1,    'CURRENTMONTHNAME'       ),
 	'currentmonthnamegen'    => array( 1,    'CURRENTMONTHNAMEGEN'    ),
 	'currentmonthabbrev'     => array( 1,    'CURRENTMONTHABBREV'     ),
@@ -220,7 +221,8 @@ $magicWords = array(
 	'currentyear'            => array( 1,    'CURRENTYEAR'            ),
 	'currenttime'            => array( 1,    'CURRENTTIME'            ),
 	'currenthour'            => array( 1,    'CURRENTHOUR'            ),
-	'localmonth'             => array( 1,    'LOCALMONTH'             ),
+	'localmonth'             => array( 1,    'LOCALMONTH', 'LOCALMONTH2' ),
+	'localmonth1'            => array( 1,    'LOCALMONTH1'             ),
 	'localmonthname'         => array( 1,    'LOCALMONTHNAME'         ),
 	'localmonthnamegen'      => array( 1,    'LOCALMONTHNAMEGEN'      ),
 	'localmonthabbrev'       => array( 1,    'LOCALMONTHABBREV'       ),
